--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSenLPBoyChkngqtwJlIWdRtM1O07KOCiaTMrrrNOfGbKcSDwA/viewform?usp=header"
         width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">
-        Chargement…
+        Chargement..
     </iframe>
 </body>
 
